# grpc-test

./: .gitignore  BUILD  CMakeLists.txt  Cargo.toml  WORKSPACE  build.rs  build.sh  data.json  go.mod  hello_server.cc  main.go  result.txt
proto/: hello.pb.go  hello.proto  hello_grpc.pb.go
src/: hello.rs
